Closed
Bug 749352
Opened 14 years ago
Closed 13 years ago
Firefox fails to connect when a proxy is used
Categories
(Firefox for Android Graveyard :: General, defect)
Tracking
(firefox14 affected, firefox15 affected, blocking-fennec1.0 -, fennec-)
RESOLVED
FIXED
Firefox 19
People
(Reporter: lcamacho, Assigned: blassey)
References
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Linux i686; rv:15.0) Gecko/20120425 Firefox/15.0a1
Build ID: 20120425030647
Steps to reproduce:
1. Configure and start a proxy
2. Set the proxy on Android (Gingerbread 2.3.4) Wifi settings
3. Start Firefox nightly, go to google.com
Actual results:
It stays loading for a while and then shows the message "the connection has timed out"
Expected results:
It should show me google.com
Comment 1•14 years ago
|
||
Which build of Firefox are you using?
| Reporter | ||
Comment 2•14 years ago
|
||
Mozilla/5.0 (Android; Mobile; rv: 15.0) Gecko/15.0 Firefox/15.0a1
Nightly
15.0a1
(2012-04-26)
Comment 3•14 years ago
|
||
Adding 'qawanted' to see if anyone else can reproduce.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: qawanted
OS: Linux → Android
Product: Fennec → Fennec Native
Hardware: x86 → ARM
Comment 4•14 years ago
|
||
Unable to reproduce the issue on Nightly/15.0a1 2012-04-29 a Motorola Droid Pro ( Android 2.3.4) using several free proxy servers.
Can you please provide more info about the proxy server used in order to try and reproduce the issue?
| Reporter | ||
Comment 5•14 years ago
|
||
The actual result has changed and now connect but It just skip the proxy.
I have a small proxy made with nodejs, testing with native Android browser and Dolphin It shows me every request but with stable Firefox and Nightly It doesnt show a single request.
| Reporter | ||
Comment 6•14 years ago
|
||
This is the proxy.
Updated•14 years ago
|
Attachment #619929 -
Attachment mime type: application/octet-stream → text/plain
Comment 7•14 years ago
|
||
Leonard, how do I run this small proxy?
| Reporter | ||
Comment 8•14 years ago
|
||
In Ubuntu:
1.- Install nodejs
2.- Execute in terminal: nodejs proxy.js
3.- Set the proxy on Android using the ip of your machine and the port is 8081
Comment 9•14 years ago
|
||
Ok, I can reproduce the issue.
Opera Mobile suffers from the same thing.
I guess proxy setting is called here:
http://mxr.mozilla.org/mozilla-central/source/netwerk/base/src/nsProtocolProxyService.cpp#504
I don't see any defines for Android for:
http://mxr.mozilla.org/mozilla-central/ident?i=NS_SYSTEMPROXYSETTINGS_CONTRACTID
Perhaps this library is useful for getting the proxy server in Android?
http://code.google.com/p/android-proxy-library/
Comment 11•14 years ago
|
||
I have the same issue, except that my proxy is in the APN settings. The Android browser works fine. So I have no browsing on 3G.
(Samsung SGS2 with 2.3.3 stock Android - Firefox Nightly)
Comment 12•14 years ago
|
||
User reported issue with Beta: http://www.reddit.com/r/Android/comments/tof33/new_firefox_beta_for_android_with_native_ui_and/c4ocyj9
blocking-fennec1.0: --- → ?
Updated•14 years ago
|
status-firefox14:
--- → affected
status-firefox15:
--- → affected
Comment 13•14 years ago
|
||
This could be handled by an add-on too
tracking-fennec: --- → 15+
blocking-fennec1.0: ? → -
Comment 14•14 years ago
|
||
(In reply to Mark Finkle (:mfinkle) from comment #13)
> This could be handled by an add-on too
And how do you download the add-on?
| Assignee | ||
Updated•13 years ago
|
tracking-fennec: 15+ → -
| Assignee | ||
Comment 16•13 years ago
|
||
Note that it seems proxy support is known to be broken in Android pre-ICS, but this patch will at least get things working in for ICS and later.
Assignee: nobody → blassey.bugs
Attachment #681147 -
Flags: review?(mark.finkle)
Comment 17•13 years ago
|
||
Comment on attachment 681147 [details] [diff] [review]
patch
>diff --git a/mobile/android/base/GeckoAppShell.java b/mobile/android/base/GeckoAppShell.java
>+ public static String getProxyForURI(String spec, String scheme, String host, int port) {
>+ } catch(java.net.URISyntaxException uriEx2) {
>+ Log.i("GeckoProxy", "failed to create uri from spec", uriEx);
>+ Log.i("GeckoProxy", "also failed to create uri from parts", uriEx2);
nit: Log.d and use sentences:
Log.d("GeckoProxy", "Failed to create uri from spec", uriEx);
Log.d("GeckoProxy", "Failed to create uri from parts", uriEx2);
>+ Log.i("GeckoProxy", "no proxy for: " + spec +", " + "scheme" + ":" + host + ":" + port);
I'd rather remove this. It leaks the URL, which is bad for private browsing. Also, I don't think this is critical enough to log.
>diff --git a/widget/android/AndroidBridge.cpp b/widget/android/AndroidBridge.cpp
Looks OK to me
r+, but you should get a toolkit person to review the toolkit parts. I thought the windowsproxy/nsWindowsSystemProxySettings -> androidproxy/nsAndroidSystemProxySettings looked fine.
Attachment #681147 -
Flags: review?(mark.finkle) → review+
| Assignee | ||
Updated•13 years ago
|
Attachment #681147 -
Flags: review?(dtownsend+bugmail)
Updated•13 years ago
|
Attachment #681147 -
Flags: review?(dtownsend+bugmail) → review+
Comment 18•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 19
| Reporter | ||
Comment 19•13 years ago
|
||
Still not working with a SGS2 with ICS.
This change is already on latest nightly right?
Comment 20•13 years ago
|
||
(In reply to Leonard Camacho [:lcamacho] from comment #19)
> Still not working with a SGS2 with ICS.
>
> This change is already on latest nightly right?
Didn't make it on today's as it landed after it was built. Check tomorrow's.
Comment 21•13 years ago
|
||
I just checked with the latest nightly on my SGS2 with CM9 (Android 4.0 base). And it works for both http and https.
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•