bug 749352 - Firefox fails to connect when a proxy is used r=mfinkle,mossop